<package>
  <name>robot_apps</name>
  <version>1.0.0</version>


  <description>The robot_apps package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ubuntu1604@todo.todo">ubuntu1604</maintainer>


  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

 <!--
  <run_depend>turtlebot_actions</run_depend>
  <run_depend>turtlebot_calibration</run_depend>
  <run_depend>turtlebot_rapps</run_depend>
  <run_depend>turtlebot_follower</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
-->
  <!--run_depend>turtlebot_panorama</run_depend-->
  <run_depend>robot_navigation</run_depend>

 
  <export>
    <metapackage/> 
  </export>
</package>
